--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -47,6 +48,17 @@
       background-color: #005fa3;
     }
   </style>
+  <script>
+    const checkAuth = () => {
+      const username = prompt("Inserisci il tuo nome utente:");
+      const password = prompt("Inserisci la password:");
+      if (username !== "Daniele" || password !== "Dani3l31802!") {
+        alert("Accesso negato. Ricarica la pagina e riprova.");
+        document.body.innerHTML = "<h2 style='color:red;text-align:center;'>Accesso negato</h2>";
+      }
+    };
+    window.onload = checkAuth;
+  </script>
 </head>
 <body>
   <h1>Benvenuto Daniele!</h1>
@@ -79,3 +91,4 @@
   </script>
 </body>
 </html>
+
